<resources>
    <string name="app_name">Travel</string>

    <string name="email_label">Email</string>
    <string name="username_label">Username</string>
    <string name="fullname_label">Nama Lengkap</string>
    <string name="password_label">Password</string>
    <string name="login_label">Log In</string>
    <string name="register_label">Daftar</string>

    <string name="origin_label">Asal</string>
    <string name="destination_label">Tujuan</string>
    <string name="date_label">Tanggal</string>
    <string name="date_picker_label">Tanggal</string>
    <string name="adult_label">Dewasa</string>
    <string name="kid_label">Anak-anak</string>
    <string name="seat_class_label">Kelas</string>
    <string name="order_label">Pesan</string>
    <string name="total_label">Jumlah</string>
    <string name="guest_label">Tamu</string>
    <string name="day_label">Hari</string>
    <string name="room_label">Kamar</string>
    <string name="duration_label">Durasi</string>
    <string name="total_room_label">Jumlah Kamar</string>
    <string name="continue_label">Lanjutkan</string>

    <string name="activity_login_forgot_pass_label">Lupa Password?</string>
    <string name="activity_login_havent_acc_label">Belum punya akun?</string>

    <string name="activity_forget_password_hint">Masukkan username anda</string>

    <string name="fragment_profile_pp_label">Profile Picture</string>
    <string name="fragment_profile_edit_profile_label">Edit Profile</string>
    <string name="fragment_profile_logout_label">Logout</string>

    <string name="notif_not_found_label">Tidak ada pemberitahuan!</string>

    <string name="notif_icon_label">Notification Icon</string>
    <string name="total_price_label">Total Harga</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
