<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/std_parent_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin_label" />

        <Spinner
            android:id="@+id/spinner_fragment_train_book_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:text="@string/destination_label" />

        <Spinner
            android:id="@+id/spinner_fragment_train_book_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:text="@string/seat_class_label" />

        <Spinner
            android:id="@+id/spinner_fragment_train_book_seat_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:text="@string/date_label" />

        <Button
            android:id="@+id/btn_fragment_train_book_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_picker_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:gravity="center"
            android:text="@string/total_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/np_fragment_train_book_adults_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/std_margin"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginRight="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/adult_label" />

            <NumberPicker
                android:id="@+id/np_fragment_train_book_kids_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/kid_label" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_fragment_train_book_do_book"
        style="@style/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_label" />

</LinearLayout>
