<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/std_parent_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_label"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_login_activity_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_label"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_login_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:hint="@string/password_label"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login_activity_do_login"
        style="@style/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/login_label" />

    <TextView
        android:id="@+id/tv_activity_login_forget_password"
        style="@style/hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/std_hyperlink_padding"
        android:text="@string/activity_login_forgot_pass_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2_section"
        android:orientation="horizontal">

        <View
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/std_margin"
            android:layout_marginLeft="@dimen/std_margin"
            android:layout_marginRight="@dimen/std_margin"
            android:layout_marginStart="@dimen/std_margin"
            android:gravity="center_horizontal"
            android:text="@string/activity_login_havent_acc_label" />

        <View
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_activity_register"
        style="@style/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/register_label" />

</LinearLayout>