<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/std_parent_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/et_activity_forget_pass_username"
        android:text="@string/activity_forget_password_hint"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_activity_forget_pass_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:hint="@string/username_label"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_activity_forget_pass_submit"
        style="@style/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:text="@string/continue_label" />

</LinearLayout>
